src/test/ui/borrowck/borrowck-move-out-of-overloaded-auto-deref.stderr
error[E0507]: cannot move out of an `Rc`
  --> $DIR/borrowck-move-out-of-overloaded-auto-deref.rs:4:14
   |
LL |     let _x = Rc::new(vec![1, 2]).into_iter();
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ move occurs because value has type `Vec<i32>`, which does not implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
